Fix 日本語 unalignment in CreatorLanguages

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -67,4 +67,5 @@ strong {
 
 .ja {
   font-family: "Noto Sans JP";
+  line-height: 1.2;
 }
